feat!: migrate to Jakarta Servlet 6.1 and Java 17 (#19)
BREAKING CHANGE: Upgrade from javax.servlet (Servlet API 2.3) to
jakarta.servlet (Jakarta Servlet 6.1) and raise minimum Java version
from 8 to 17. Version bumped to 2.0.0-SNAPSHOT.

- Migrate all javax.servlet imports to jakarta.servlet
- Update source/target level from 1.8 to 17
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Add missing Jakarta Servlet method implementations (isReady, setWriteListener, etc.)
- Update CI workflows to JDK 17, latest GitHub Actions versions
- Update CodeQL workflow to v3
- Update CLAUDE.md and README.md to reflect new requirements